--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ignacio Pinazo Portfolio</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <title>Ignacio Pinazo | Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
-  <body>
+
+  <body class="d-flex flex-column min-vh-100 bg-light">
+
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 fixed-top shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
       <div class="container">
         <a class="navbar-brand fw-bold" href="index.html">Portfolio</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -26,32 +28,23 @@
       </div>
     </nav>
 
-    <!-- HERO / MAIN SECTION -->
-    <section class="hero d-flex align-items-center text-dark">
-      <div class="container py-5">
-        <div class="row align-items-center">
-          <!-- Texto -->
-          <div class="col-md-7">
-            <h1 class="fw-bold mb-3">Ignacio Pinazo</h1>
-            <p class="lead text-secondary mb-4">
-              BSc in Computer Science @ <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
-              Quantitative Research · Data Science · Software Engineering
-            </p>
-            <a href="projects.html" class="btn btn-dark btn-lg me-2">View Projects</a>
-            <a href="assets/IgnacioPinazoCV_ENG.pdf" class="btn btn-outline-dark btn-lg" target="_blank">Download CV</a>
-          </div>
-
-          <!-- Foto -->
-          <div class="col-md-5 text-center">
-            <img src="assets/images/FotoCarnet.jpg" alt="Ignacio Pinazo" class="avatar">
-          </div>
-        </div>
+    <!-- HERO SECTION -->
+    <header class="hero d-flex align-items-center justify-content-center text-light text-center">
+      <div class="overlay"></div>
+      <div class="container position-relative">
+        <h1 class="fw-bold mb-3 display-5">Ignacio Pinazo</h1>
+        <p class="lead mb-4">
+          BSc in Computer Science @ <strong>Universitat Politècnica de València (UPV)</strong><br>
+          Quantitative Research · Data Science · Software Engineering
+        </p>
+        <a href="projects.html" class="btn btn-light btn-lg me-2">View Projects</a>
+        <a href="assets/IgnacioPinazoCV_ENG.pdf" class="btn btn-outline-light btn-lg" target="_blank">Download CV</a>
       </div>
-    </section>
+    </header>
 
     <!-- FOOTER -->
-    <footer class="bg-dark text-light text-center py-3 mt-5">
-      <p class="mb-0">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
+    <footer class="bg-dark text-light text-center py-3 mt-auto">
+      <p class="mb-0 small">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
