--- a/projects.html
+++ b/projects.html
@@ -1,58 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects | Ignacio Pinazo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="assets/css/style.css" rel="stylesheet" />
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3 fixed-top">
-    <div class="container">
-      <a class="navbar-brand fw-bold" href="index.html">Ignacio Pinazo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link active" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Projects | Ignacio Pinazo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
+  </head>
 
-  <main class="container my-5 pt-5">
-    <h2 class="fw-bold mb-4 text-center">Projects</h2>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">Algorithmic Trading Strategy</h5>
-            <p class="card-text">Development of a momentum-based trading bot using Python, pandas, and vectorbt for backtesting and signal optimization.</p>
-            <a href="https://github.com/Fisjo" target="_blank" class="btn btn-outline-dark btn-sm">View Code</a>
+  <body class="d-flex flex-column min-vh-100 bg-light">
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
+      <div class="container">
+        <a class="navbar-brand fw-bold" href="index.html">Portfolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link active" href="projects.html">Projects</a></li>
+            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- PROJECTS SECTION -->
+    <main class="flex-grow-1 text-dark">
+      <div class="container mt-5 pt-5 pb-5">
+        <h1 class="fw-bold mb-4 text-center">Projects</h1>
+        <div class="row g-4">
+          <!-- Project 1 -->
+          <div class="col-md-6">
+            <div class="card shadow-sm h-100">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">Algorithmic Trading Strategy</h5>
+                <p class="card-text">
+                  Development of a momentum-based trading bot using Python, pandas, and vectorbt for backtesting and signal optimization.
+                </p>
+                <a href="https://github.com/Fisjo" target="_blank" class="btn btn-outline-dark btn-sm">View Code</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 2 -->
+          <div class="col-md-6">
+            <div class="card shadow-sm h-100">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">PET Image Reconstruction</h5>
+                <p class="card-text">
+                  Deep learning model for tomographic image reconstruction using CNNs, with optimized C-based preprocessing pipelines.
+                </p>
+                <a href="#" class="btn btn-outline-dark btn-sm">Read Paper</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 3 -->
+          <div class="col-md-6">
+            <div class="card shadow-sm h-100">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">5G KPI Analytics Dashboard</h5>
+                <p class="card-text">
+                  Real-time analytics dashboard for monitoring network KPIs (RSRP, RSRQ, SINR) using Databricks, PySpark, and Delta Lake.
+                </p>
+                <a href="#" class="btn btn-outline-dark btn-sm">View Report</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Project 4 -->
+          <div class="col-md-6">
+            <div class="card shadow-sm h-100">
+              <div class="card-body">
+                <h5 class="card-title fw-bold">Smart Factory Integration</h5>
+                <p class="card-text">
+                  Middleware integration of SCADA, PLC, and ERP systems using RabbitMQ and RESTful APIs for real-time industrial data flows.
+                </p>
+                <a href="#" class="btn btn-outline-dark btn-sm">View Details</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-6">
-        <div class="card shadow-sm">
-          <div class="card-body">
-            <h5 class="card-title">PET Image Reconstruction</h5>
-            <p class="card-text">Deep learning model for tomographic reconstruction using CNNs, with optimized C-based raw sinogram preprocessing.</p>
-            <a href="#" class="btn btn-outline-dark btn-sm">View Paper</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>
+    </main>
 
-  <footer class="bg-dark text-center text-light py-3 mt-5">
-    <p class="mb-0">© 2025 Ignacio Pinazo.</p>
-  </footer>
+    <!-- FOOTER -->
+    <footer class="bg-dark text-light text-center py-3 mt-auto">
+      <p class="mb-0 small">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
+    </footer>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
