--- a/about.html
+++ b/about.html
@@ -41,10 +41,10 @@
               I’m a Computer Engineering student at the Universitat Politècnica de València (UPV) with a strong focus on quantitative finance, data science, and software engineering.
             </p>
             <p class="lead text-secondary">
-              My work revolves around applying data-driven analytical and programming skills to real-world financial challenges — particularly in algorithmic trading, risk modelling, and machine learning.
+              My work revolves around applying data-driven analytical and programming skills to real-world financial challenges. I particularly particularly enjoy algorithmic trading, financial derivatives, and machine learning.
             </p>
             <p class="lead text-secondary">
-              I recently completed an internship at Ernst & Young (EY) within the Tax & Quantitative Services (TQS) division, where I contributed to the preparation of technical documentation for innovation projects, performed analytical cost modelling, and supported financial validation processes for clients under Spanish R&D tax frameworks.
+              I recently completed an internship at Ernst & Young (EY) within the Tax & Quantitative Services division, where I contributed to the preparation of technical documentation for innovation projects, performed analytical cost modelling, and supported financial validation processes for clients under Spanish R&D tax frameworks.
             </p>
             <p class="lead text-secondary">
               I’m also an active member of the Software Group at the UPV Investment Club, where we develop and backtest algorithmic trading strategies, research quantitative techniques for portfolio optimization, and participate in student-led finance competitions.
@@ -58,8 +58,8 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="bg-dark text-light text-center py-3 mt-auto">
-      <p class="mb-0 small">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
+    <footer class="bg-dark text-light text-center py-3 mt-auto">>
+      <p class="mb-0 small">© Ignacio Pinazo Portfolio</p>
     </footer>
 
     <script src="https://c
