--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | Ignacio Pinazo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
 
   <body class="d-flex flex-column min-vh-100 bg-light">
+
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
       <div class="container">
@@ -28,25 +29,32 @@
     </nav>
 
     <!-- CONTACT SECTION -->
-    <main class="flex-grow-1 text-dark">
-      <div class="container mt-5 pt-5 pb-5">
-        <h1 class="fw-bold mb-4 text-center">Contact Me</h1>
-        <p class="text-center mb-5 lead text-secondary">
-          Feel free to reach out for collaborations, opportunities, or just to connect.
+    <main class="flex-grow-1 d-flex align-items-center justify-content-center">
+      <div class="container text-center mt-5 pt-5">
+        <h1 class="fw-bold mb-4">Contact</h1>
+        <p class="lead text-secondary mb-4">
+          Feel free to reach out via email or schedule a meeting directly on Google Calendar.
         </p>
 
-        <form class="mx-auto" style="max-width:600px;"
-              action="mailto:ignacio.po.ipo@gmail.com"
-              method="POST"
-              enctype="text/plain">
-          <button type="submit" class="btn btn-dark px-4 form-control">Send Message</button>
-        </form>
+        <div class="d-flex flex-column align-items-center gap-3">
+          <!-- Email button -->
+          <a href="mailto:ignacio.po.ipo@gmail.com" class="btn btn-dark btn-lg">
+            Send Email
+          </a>
+
+          <!-- Google Calendar button -->
+          <a href="https://calendar.google.com/calendar/u/0/r/eventedit?add=ignacio.po.ipo@gmail.com&text=Meeting+with+Ignacio+Pinazo&details=Hi+Ignacio,+I'd+like+to+schedule+a+call+to+discuss...&dates="
+             target="_blank"
+             class="btn btn-outline-dark btn-lg">
+            Request a Meeting
+          </a>
+        </div>
       </div>
     </main>
 
     <!-- FOOTER -->
     <footer class="bg-dark text-light text-center py-3 mt-auto">
-      <p class="mb-0 small">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
+      <p class="mb-0 small">© 2025 Ignacio Pinazo · Portfolio</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
