--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1 class="fw-bold mb-3 display-5">Ignacio Pinazo</h1>
         <p class="lead mb-4">
           BSc in Computer Science @ <strong>Universitat Politècnica de València (UPV)</strong><br>
-          Quantitative Research · Data Science · Software Engineering
+          Quantitative Finance · Data Science · Software Engineering
         </p>
         <a href="projects.html" class="btn btn-light btn-lg me-2">View Projects</a>
         <a href="assets/IgnacioPinazoCV_ENG.pdf" class="btn btn-outline-light btn-lg" target="_blank">Download CV</a>
@@ -44,7 +44,7 @@
 
     <!-- FOOTER -->
     <footer class="bg-dark text-light text-center py-3 mt-auto">
-      <p class="mb-0 small">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
+      <p class="mb-0 small">© Ignacio Pinazo Portfolio</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
