--- a/projects.html
+++ b/projects.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects | Ignacio Pinazo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
 
   <body class="d-flex flex-column min-vh-100 bg-light">
+
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm">
       <div class="container">
@@ -27,69 +28,32 @@
       </div>
     </nav>
 
-    <!-- PROJECTS SECTION -->
-    <main class="flex-grow-1 text-dark">
-      <div class="container mt-5 pt-5 pb-5">
-        <h1 class="fw-bold mb-4 text-center">Projects</h1>
-        <div class="row g-4">
-          <!-- Project 1 -->
-          <div class="col-md-6">
-            <div class="card shadow-sm h-100">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">Algorithmic Trading Strategy</h5>
-                <p class="card-text">
-                  Development of a momentum-based trading bot using Python, pandas, and vectorbt for backtesting and signal optimization.
-                </p>
-                <a href="https://github.com/Fisjo" target="_blank" class="btn btn-outline-dark btn-sm">View Code</a>
-              </div>
-            </div>
-          </div>
+    <!-- MAIN CONTENT -->
+    <main class="projects-page">
+      <div class="container text-center mt-5 pt-5">
+        <h1 class="fw-bold mb-5">Projects</h1>
 
-          <!-- Project 2 -->
-          <div class="col-md-6">
-            <div class="card shadow-sm h-100">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">PET Image Reconstruction</h5>
+        <div class="d-flex justify-content-center">
+          <a href="https://github.com/Fisjo" target="_blank" class="text-decoration-none text-dark project-card-link">
+            <div class="card shadow-sm border-0 project-card" style="max-width: 700px;">
+              <img src="assets/images/MomentumStrategySnapshot.jpeg" class="card-img-top" alt="Momentum Strategy Preview">
+              <div class="card-body text-start">
+                <h5 class="card-title fw-bold">Multi-Asset Momentum Strategy Backtesting</h5>
                 <p class="card-text">
-                  Deep learning model for tomographic image reconstruction using CNNs, with optimized C-based preprocessing pipelines.
+                  This project implements and analyzes a cross-sectional momentum trading strategy across a diversified set of U.S. equities using Python.
+The analysis follows a complete quantitative research workflow: data collection → preprocessing → signal generation → backtesting & performance evaluation, including robustness checks and transaction cost modeling.
                 </p>
-                <a href="#" class="btn btn-outline-dark btn-sm">Read Paper</a>
+                <button class="btn btn-outline-dark">View Code</button>
               </div>
             </div>
-          </div>
-
-          <!-- Project 3 -->
-          <div class="col-md-6">
-            <div class="card shadow-sm h-100">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">5G KPI Analytics Dashboard</h5>
-                <p class="card-text">
-                  Real-time analytics dashboard for monitoring network KPIs (RSRP, RSRQ, SINR) using Databricks, PySpark, and Delta Lake.
-                </p>
-                <a href="#" class="btn btn-outline-dark btn-sm">View Report</a>
-              </div>
-            </div>
-          </div>
-
-          <!-- Project 4 -->
-          <div class="col-md-6">
-            <div class="card shadow-sm h-100">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">Smart Factory Integration</h5>
-                <p class="card-text">
-                  Middleware integration of SCADA, PLC, and ERP systems using RabbitMQ and RESTful APIs for real-time industrial data flows.
-                </p>
-                <a href="#" class="btn btn-outline-dark btn-sm">View Details</a>
-              </div>
-            </div>
-          </div>
+          </a>
         </div>
       </div>
     </main>
 
     <!-- FOOTER -->
     <footer class="bg-dark text-light text-center py-3 mt-auto">
-      <p class="mb-0 small">© 2025 Ignacio Pinazo · Built with Bootstrap 5</p>
+      <p class="mb-0 small">© Ignacio Pinazo Portfolio</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
